plugins {
    id 'java'
    id 'eclipse'
    id 'idea'
    id 'org.springframework.boot' version '4.1.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'br.dev.xb'
version = '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-json'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-freemarker'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.freemarker:freemarker:2.3.34'
    implementation 'org.springframework:spring-context-support'
    implementation 'jakarta.mail:jakarta.mail-api:2.1.3'
    implementation 'org.eclipse.angus:jakarta.mail:2.0.3'
    
    // JSON & Serialization
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    
    // Database
    runtimeOnly 'org.postgresql:postgresql:42.7.13'
    implementation 'org.springframework.boot:spring-boot-starter-flyway'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'
    
    // UUID v7 Generator (RFC 9562)
    implementation 'com.github.f4b6a3:uuid-creator:6.1.1'
    
    // JWT for authentication
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'
    
    // OpenAPI & Swagger UI (Springdoc)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'

    // S3 Storage (AWS S3, SeaweedFS, Cloudflare R2)
    implementation 'software.amazon.awssdk:s3:2.30.36'
    
    // MapStruct & Utilities
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    compileOnly 'org.projectlombok:lombok:1.18.46'
    annotationProcessor 'org.projectlombok:lombok:1.18.46'
    
    // Development
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    
    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation platform('org.testcontainers:testcontainers-bom:1.20.6')
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
}

tasks.named('test') {
    useJUnitPlatform()
    
    systemProperty 'docker.client.api.version', '1.45'
    systemProperty 'api.version', '1.45'
    
    // Automatically detect Docker Desktop socket on macOS if DOCKER_HOST is not set
    def macSocket = new File(System.getProperty('user.home') + '/.docker/run/docker.sock')
    if (macSocket.exists()) {
        environment 'DOCKER_HOST', 'unix://' + macSocket.absolutePath
        environment 'TESTCONTAINERS_DOCKER_SOCKET_OVERRIDE', '/var/run/docker.sock'
    }
}